[package]
name = "secured_linked_list"
version = "0.5.1"
description = "A cryptographically secured and provable linked list"
license = "MIT OR BSD-3-Clause"
repository = "https://github.com/maidsafe/secured_linked_list"
documentation = "https://docs.rs/secured_linked_list"
keywords = [ "Safe", "Network", "SafeNetwork" ]
authors = [ "MaidSafe Developers <dev@maidsafe.net>" ]
edition = "2018"

[dependencies]
bincode = "1.2.1"
bls = { package = "blsttc", version = "6.0.0" }
itertools = "~0.9.0"
serde = { version = "1.0.117", features = ["derive"] }
thiserror = "1.0.23"
